[package]
name = "dust"
version = "0.1.0"
edition = "2021"

[dependencies]
dust-core = { path = "../dust-core" }
argh = "^0.1"
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.1"
tokio = { version = "1", features = ["full"] }
tower-lsp.workspace = true

